--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Enumerating objects: 3, done.
 Counting objects: 100% (3/3), done.
 Delta compression using up to 16 threads
 Compressing objects: 100% (2/2), done.
-Writing objects: 100% (3/3), 356 bytes | 356.00 KiB/s, done.
+Writing objects: 1                                                        00% (3/3), 356 bytes | 356.00 KiB/s, done.
 Total 3 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)
 To https://github.com/Manas10409/learning.git
  * [new branch]      main </title>
